--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,21 +1,37 @@
 .ralphy {
 
-	(min_width:1401px) {
-
+	(min_width: 1401px) {
+                width: 250px;
+		height: 186px;
+		background:url(ralphy.gif) 0 0px;
 	}
 	(min-width: 1201px) and (max-width: 1400px) {
-
+		width: 250px;	
+		height: 186px;
+		background:url(ralphy.gif) 250 0px; 
 	}
 	(min-width: 1001px) and (max-width: 1200px) {
+		width: 250px;
+		height: 186px;
+		background:url(ralphy.gif) 0 -187px;
 
 	}
 	(min-width: 801px) and (max-width: 1000px) {
+		width: 250px;
+		height: 186px;
+		background:url(ralphy.gif) 250 -187px;
 
 	}
 	(min-width: 601px) and (max-width: 800px) {
+		width: 250px;
+		height: 186px;
+		background:url(ralphy.gif) 0 -374px;
 
 	}
 	(min-width:0px) and (max-width: 600px) {
+		width: 250px;
+		height: 186px;
+		background:url(ralphy.gif) 250 -374px;
 
 	}
 									
